--- a/css/styles.css
+++ b/css/styles.css
@@ -526,7 +526,7 @@ a {
 }
 /* - -- - - -- - -- -- - -Страница портфолио - - -- -- -- - -*/
 /*- -- - -- - --  контент main - - ---- -- -- - -- - -- -- -- */
-.very-good {
+.prime {
   padding: 94px 0;
 }
 
@@ -537,10 +537,13 @@ a {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  padding: 6px 22px;
+  margin: 0;
 }
 .filter .btn.second {
   color: var(--title-text-color);
-
+  padding: 6px 22px;
+  margin: 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -593,7 +596,7 @@ a {
 }
 .list-item {
   flex-basis: calc((100% - 90px) / 3);
-  /* border: 1px solid #EEEEEE; */
+  display: flex;
 }
 .list-item:not(:nth-child(3n)) {
   margin-right: 30px;
@@ -601,17 +604,16 @@ a {
 .list-item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
 }
-.list-item:focus,
-.list-item:hover {
+.list-item-link:focus,
+.list-item-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.item-title {
-  margin-top: 20px;
-}
-.item {
-  margin-top: 4px;
-  margin-bottom: 20px;
+.description-card {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border: 1px solid #eeeeee;
+  border-top: 0px;
 }
 
 /*--- -- - -- --- -- - скрываем заголовки -- -- -- -*/
