--- a/css/styles.css
+++ b/css/styles.css
@@ -534,6 +534,7 @@ a {
 /* - -- - - -- - -- -- - -Страница портфолио - - -- -- -- - -*/
 /*- -- - -- - --  контент main - - ---- -- -- - -- - -- -- -- */
 .prime {
+  background-color: #e5e5e5;
   padding: 94px 0;
 }
 
